# xidauth

./: .gitignore  Cargo.toml  Makefile  README.md  Readme.md  arch.txt  redis.sh  traffictest.py
.github/workflows/: rust.yml
.idx/: dev.nix
buildscripts/: dependencies.mk  pistache.mk  redis-plus-plus.mk
include/: auth_service.h
lib/hiredis/lib/: libhiredis.so.1.2.1-dev
src/: auth_service.cpp  main.cpp  main.rs
src/auth/: auth_error.rs  auth_service.rs  endpoints.rs  mod.rs
src/database/: database.rs  database_error.rs  mod.rs  utils.rs
src/db/: database.rs  db_error.rs
src/o_auth2/: client.rs  mod.rs  support.rs
src/tests/: auth_endoints_test.rs  auth_test.rs  mod.rs
srcn/auth/: auth_config.rs  auth_endpoint.rs  mod.rs
srcn/db/: mod.rs
