[package]
name = "xidauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
env_logger = "0.11.5"
futures = "0.3.31"
oxide-auth = "0.6.1"
oxide-auth-actix = "0.3.0"
oxide-auth-db = { version = "0.3.0", features = ["with-redis"] }
#reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
redis = "0.27.5"
